:notebook: Debugged Rendering of Documentation
The documentation files were not up-to-date with the nbdev version 2

--- a/nbs/02_updates.ipynb
+++ b/nbs/02_updates.ipynb
@@ -11,7 +11,15 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "from pathlib import Path\n",
+    "from pathlib import Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Insert in Path Project Directory\n",
     "sys.path.insert(0, str(Path().cwd().parent))"
@@ -69,7 +77,7 @@
     "from extracao.format import _read_df, merge_on_frequency, parse_bw\n",
     "\n",
     "getcontext().prec = 5\n",
-    "load_dotenv(find_dotenv())\n"
+    "load_dotenv(find_dotenv())"
    ]
   },
   {
@@ -101,7 +109,7 @@
     "        f\"Trusted_Connection={trusted_conn};\"\n",
     "        f\"MultipleActiveResultSets={mult_results};\",\n",
     "        timeout=TIMEOUT,\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -164,7 +172,7 @@
     "        df.Num_Serviço == \"205\", \"Frequência\"\n",
     "    ].apply(lambda x: Decimal(x) / Decimal(1000))\n",
     "    df.loc[:, \"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -195,7 +203,7 @@
     "        df.to_parquet(file, compression=\"gzip\", index=False)\n",
     "    except (ArrowInvalid, ArrowTypeError) as e:\n",
     "        raise e(f\"Não possível salvar o arquivo parquet {file}\") from e\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -252,7 +260,7 @@
     "    )\n",
     "    df.drop([\"Fase\", \"Situação\"], axis=1, inplace=True)\n",
     "    df = df.loc[:, COLUNAS]\n",
-    "    return _save_df(df, folder, \"radcom\")\n"
+    "    return _save_df(df, folder, \"radcom\")"
    ]
   },
   {
@@ -580,7 +588,7 @@
     "    stel.drop(\"Unidade\", axis=1, inplace=True)\n",
     "    stel[\"Multiplicidade\"] = 1\n",
     "    stel = stel.loc[:, COLUNAS]\n",
-    "    return _save_df(stel, folder, \"stel\")\n"
+    "    return _save_df(stel, folder, \"stel\")"
    ]
   },
   {
@@ -842,7 +850,7 @@
     "    df[[\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]] = df[\n",
     "        [\"Largura_Emissão(kHz)\", \"Classe_Emissão\"]\n",
     "    ].astype(\"string\")\n",
-    "    return df.drop(\"Designação_Emissão\", axis=1)\n"
+    "    return df.drop(\"Designação_Emissão\", axis=1)"
    ]
   },
   {
@@ -886,7 +894,7 @@
     "        mosaico.loc[mosaico.Classe_Emissão == \"\", \"Classe_Emissão\"] = pd.NA\n",
     "        mosaico[\"Multiplicidade\"] = 1\n",
     "        mosaico = mosaico.loc[:, COLUNAS]\n",
-    "    return _save_df(mosaico, folder, \"srd\")\n"
+    "    return _save_df(mosaico, folder, \"srd\")"
    ]
   },
   {
@@ -1230,7 +1238,7 @@
     "    gc.collect()\n",
     "    df_sub = df_sub.reset_index()\n",
     "    df_sub = df_sub.loc[:, COLUNAS]\n",
-    "    return _save_df(df_sub, folder, \"telecom\")\n"
+    "    return _save_df(df_sub, folder, \"telecom\")"
    ]
   },
   {
@@ -1489,7 +1497,7 @@
     "    icao.loc[np.isclose(icao.Longitude, -472.033447), \"Longitude\"] = -47.2033447\n",
     "    icao.loc[np.isclose(icao.Longitude, 69.934998), \"Longitude\"] = -69.934998\n",
     "\n",
-    "    return _save_df(icao, folder, \"aero\")\n"
+    "    return _save_df(icao, folder, \"aero\")"
    ]
   },
   {
@@ -1648,7 +1656,7 @@
     "        is_valid = result.COORD_VALIDA\n",
     "    if connector is None:\n",
     "        del conn\n",
-    "    return [str(mun), str(lat), str(long), str(is_valid)]\n"
+    "    return [str(mun), str(lat), str(long), str(is_valid)]"
    ]
   },
   {
@@ -1693,7 +1701,7 @@
     "    ].fillna(\"-1\")\n",
     "\n",
     "    # # Drop the _merge column\n",
-    "    return df_cache.drop(columns=\"_merge\")\n"
+    "    return df_cache.drop(columns=\"_merge\")"
    ]
   },
   {
@@ -1750,7 +1758,7 @@
     "\n",
     "    df_cache.loc[df_cache.Coords_Valida_IBGE == \"-1\", \"Coords_Valida_IBGE\"] = pd.NA\n",
     "\n",
-    "    return df_cache\n"
+    "    return df_cache"
    ]
   },
   {
