--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -17,13 +17,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | hide\n",
+    "#| hide\n",
     "import sys, os\n",
-    "from pathlib import Path\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
     "\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path.cwd().parent))\n",
-    "# os.chdir(Path.cwd().parent / 'extracao')"
+    "sys.path.insert(0, str(Path.cwd().parent))"
    ]
   },
   {
@@ -432,43 +440,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| \n",
+    "#| eval: false\n",
     "folder = Path.cwd().parent / \"dados\"\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_left = _filter_matlab(pd.read_parquet(folder / \"base.parquet.gzip\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_right = pd.read_parquet(folder / \"aero.parquet.gzip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = merge_on_frequency(df_left, df_right)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
