--- a/nbs/_smp.ipynb
+++ b/nbs/_smp.ipynb
@@ -92,15 +92,11 @@
    "source": [
     "MONGO_SMP = {\n",
     "    \"$and\": [\n",
-    "        # {\"DataExclusao\": None},\n",
     "        {\"DataValidade\": {\"$nin\": [\"\", None]}},\n",
     "        {\"Status.state\": \"LIC-LIC-01\"},\n",
     "        {\"NumServico\": \"010\"},\n",
-    "        # {\"FreqInicialMHz\": {\"$nin\": [None, \"\", 0]}},\n",
-    "        # {\"FreqCentralMHz\": {\"$nin\": [None, \"\", 0]}},\n",
-    "        # {\"FreqFinalMHz\": {\"$nin\": [None, \"\", 0]}},\n",
     "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0]}},\n",
-    "        {\"FreqRxMHz\": {\"$nin\": [None, \"\", 0]}},\n",
+    "        {\"FreqTxMHz\": {\"$type\": 1.0}}\n",
     "    ]\n",
     "}\n",
     "\n",
@@ -621,80 +617,6 @@
    "source": [
     "df = df.astype(DTYPE_SMP)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ffcf57a7e724a899291ddef9373b4f8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62b3ff3708a443b2b5d34d5b3ec4964e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adad09cb6d5842668d596c834914174f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6bb97c274a4426eb6ea9f23802a5323",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "profile = ProfileReport(df, minimal=True, title=\"Entidades SMP\")\n",
-    "profile.to_file(f\"{dados}/relatorio_smp.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
