--- a/nbs/06_icao.ipynb
+++ b/nbs/06_icao.ipynb
@@ -11,11 +11,18 @@
     "%autoreload 2\n",
     "\n",
     "import sys,os\n",
-    "from pathlib import Path\n",
-    "\n",
+    "from pathlib import Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
     "# Insert in Path Project Directory\n",
-    "sys.path.insert(0, str(Path().cwd().parent))\n",
-    "os.chdir(Path.cwd().parent / 'extracao')"
+    "sys.path.insert(0, str(Path().cwd().parent))"
    ]
   },
   {
@@ -112,6 +119,15 @@
     "    return multiplier * (\n",
     "        float(lon[1:3]) + float(lon[4:6]) / 60 + float(lon[7:9]) / 3600.0\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import test_close"
    ]
   },
   {
@@ -366,6 +382,10 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
