:recycle: Migrada conexões de Banco e Lógica de Dados para Classes
Criar módulo conectors.py para encapsular criação de conectores de banco

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -220,16 +220,60 @@
     "    \"frequency\": \"Frequência\",\n",
     "    \"licensee\": \"Entidade\",\n",
     "    \"NumFistel\": \"Fistel\",\n",
-    "    \"estacao.NumEstacao\": \"Número_Estação\",\n",
-    "    \"srd_planobasico.NomeMunicipio\": \"Município\",\n",
-    "    \"srd_planobasico.CodMunicipio\": \"Código_Município\",\n",
-    "    \"srd_planobasico.SiglaUF\": \"UF\",\n",
-    "    \"estacao.MedLatitudeDecimal\": \"Latitude\",\n",
-    "    \"estacao.MedLongitudeDecimal\": \"Longitude\",\n",
+    "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"NomeMunicipio\": \"Município\",\n",
+    "    \"CodMunicipio\": \"Código_Município\",\n",
+    "    \"SiglaUF\": \"UF\",\n",
+    "    \"MedLatitudeDecimal\": \"Latitude\",\n",
+    "    \"MedLongitudeDecimal\": \"Longitude\",\n",
     "    \"stnClass\": \"Classe\",\n",
     "    \"NumServico\": \"Num_Serviço\",\n",
-    "    \"habilitacao.DataValFreq\": \"Validade_RF\",\n",
-    "    \"Status.state\": \"Status\",\n",
+    "    \"DataValFreq\": \"Validade_RF\",\n",
+    "    \"state\": \"Status\",\n",
+    "}\n",
+    "\n",
+    "PROJECTION_SRD = {\"frequency\": 1.0,\n",
+    "                \"licensee\": 1.0,\n",
+    "                \"NumFistel\": 1.0,\n",
+    "                \"estacao.NumEstacao\": 1.0,\n",
+    "                # flatten the nested fields with dot notation\n",
+    "                \"srd_planobasico.NomeMunicipio\": \"$srd_planobasico.NomeMunicipio\",\n",
+    "                \"srd_planobasico.CodMunicipio\": \"$srd_planobasico.CodMunicipio\",\n",
+    "                \"srd_planobasico.SiglaUF\": \"$srd_planobasico.SiglaUF\",\n",
+    "                \"estacao.MedLatitudeDecimal\": \"$estacao.MedLatitudeDecimal\",\n",
+    "                \"estacao.MedLongitudeDecimal\": \"$estacao.MedLongitudeDecimal\",\n",
+    "                \"stnClass\": 1.0,\n",
+    "                \"NumServico\": 1.0,\n",
+    "                \"habilitacao.DataValFreq\": 1.0,\n",
+    "                \"Status.state\": \"$Status.state\"\n",
+    "               }\n",
+    "\n",
+    "COLS_SMP = {\n",
+    "    \"NumAto\": \"Num_Ato\",\n",
+    "    \"NumFistel\": \"Fistel\",\n",
+    "    \"NomeEntidade\": \"Entidade\",\n",
+    "    \"SiglaUf\": \"UF\",\n",
+    "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"CodMunicipio\": \"Código_Município\",\n",
+    "    \"DataValidade\": \"Validade_RF\",\n",
+    "    \"FreqTxMHz\": \"Frequência_Transmissão\",\n",
+    "    \"FreqRxMHz\": \"Frequência_Recepção\",\n",
+    "    \"formId\": \"Tipo_Estação\",\n",
+    "    \"Tecnologia\": \"Tecnologia\",\n",
+    "    \"Latitude\": \"Latitude\",\n",
+    "    \"Longitude\": \"Longitude\",\n",
+    "    \"DesignacaoEmissao\": \"Designacao_Emissão\",\n",
+    "    \"PotenciaTransmissorWatts\": \"Potência(W)\",\n",
+    "    \"CodTipoAntena\": \"Cod_TipoAntena\",\n",
+    "    \"Polarizacao\": \"Polarização\",\n",
+    "    \"RaioAntena\": \"Raio_Antena\",\n",
+    "    \"GanhoAntena\": \"Ganho_Antena\",\n",
+    "    \"FrenteCostaAntena\": \"FC_Antena\",\n",
+    "    \"AnguloMeiaPotenciaAntena\": \"Ang_MP_Antena\",\n",
+    "    \"AnguloElevacao\": \"Ângulo_Elevação\",\n",
+    "    \"Azimute\": \"Azimute\",\n",
+    "    \"AlturaAntena\": \"Altura_Antena\",\n",
+    "    \"PerdasAcessorias\": \"Perdas_Acessorias\",\n",
     "}"
    ]
   },
@@ -389,6 +433,16 @@
     "            \"NumFistel\": {\"$nin\": [None, \"\"]},\n",
     "        }\n",
     "    ]\n",
+    "}\n",
+    "\n",
+    "MONGO_SMP = {\n",
+    "    \"$and\": [\n",
+    "        {\"DataValidade\": {\"$nin\": [\"\", None]}},\n",
+    "        {\"Status.state\": \"LIC-LIC-01\"},\n",
+    "        {\"NumServico\": \"010\"},\n",
+    "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0]}},\n",
+    "        {\"FreqTxMHz\": {\"$type\": 1.0}},\n",
+    "    ]\n",
     "}"
    ]
   },
@@ -408,8 +462,8 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "BW_pattern = re.compile(\"^(\\d{1,3})([HKMG])(\\d{0,2})(\\w{0,3})\")\n",
-    "REGEX_ESTADOS = f'({\"|\".join(ESTADOS)})'"
+    "REGEX_ESTADOS = f'({\"|\".join(ESTADOS)})'\n",
+    "RE_BW = re.compile(\"^(\\d{1,3})([HKMG])(\\d{0,2})(\\w{0,3})\")"
    ]
   },
   {
