--- a/nbs/03_format.ipynb
+++ b/nbs/03_format.ipynb
@@ -62,9 +62,8 @@
     "from geopy.distance import geodesic\n",
     "from pyarrow import ArrowInvalid\n",
     "\n",
-    "from extracao.constants import APP_ANALISE_EN, APP_ANALISE_PT, BW, BW_pattern\n",
+    "from extracao.constants import APP_ANALISE_EN, APP_ANALISE_PT, BW, RE_BW\n",
     "\n",
-    "RE_BW = re.compile(BW_pattern)\n",
     "MAX_DIST = 10  # Km\n",
     "LIMIT_FREQ = 84812.50\n",
     "load_dotenv(find_dotenv(), override=True)"
@@ -146,7 +145,7 @@
     "        \"Município_IBGE\",\n",
     "        \"UF\",\n",
     "    ]\n",
-    "    df.loc[:, cols_desc] = df.loc[:, cols_desc].fillna(\"NI\")\n",
+    "    df.loc[:, cols_desc] = df.loc[:, cols_desc].astype(\"string\").fillna(\"NI\")\n",
     "\n",
     "    df[\"Descrição\"] = (\n",
     "        \"[\"\n",
