--- a/nbs/10_smp.ipynb
+++ b/nbs/10_smp.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| default_exp smp\n",
     "%load_ext autoreload\n",
@@ -42,7 +33,25 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from fastcore.xtras import Path"
+    "from fastcore.xtras import Path\n",
+    "import pandas as pd\n",
+    "from dataclasses import dataclass\n",
+    "from fastcore.xtras import Path\n",
+    "from fastcore.foundation import GetAttr\n",
+    "import pandas as pd\n",
+    "from extracao.connectors import DBConnectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "@dataclass\n",
+    "class SMP:\n",
+    "    connector: DBConnectors = DBConnectors()"
    ]
   }
  ],
