--- a/nbs/_smp.ipynb
+++ b/nbs/_smp.ipynb
@@ -621,9 +621,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda-env-dados-py",
+   "display_name": "python3",
    "language": "python",
-   "name": "conda-env-dados-py"
+   "name": "python3"
   }
  },
  "nbformat": 4,
