--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -11,7 +11,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "from fastcore.xtras import Path\n"
+    "from fastcore.xtras import Path"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RFDataHub "
+    "# RFDataHub "
    ]
   },
   {
@@ -43,6 +43,13 @@
     "* O fluxo é concentrado nos dados licenciados junto à ANATEL de serviços públicos de Radiodifusão e Serviços Privados de Telecomunicações, além de dados de emissores aeronáuticos consumidos de diversas APIs e fontes documentais institucionais.\n",
     "  \n",
     "* Os diversos módulos presentes fazem a extração, limpeza, pós-processamento, validação, verificação de qualidade e agregação desses dados num formato consolidado para os planos de monitoração da ANATEL."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"dados.png\" width=\"720\"></img>"
    ]
   },
   {
@@ -2598,10 +2605,6 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.4"
   }
  },
  "nbformat": 4,
