:sparkles: Reimplementação do módulo updates.py
Foi reimplementada toda lógica de conexão de banco, extração e pós-processamento em classes base, herança e composição

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -27,7 +27,8 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "import re"
+    "import re\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -48,7 +49,10 @@
     "#|export\n",
     "TIMEOUT = 5\n",
     "RELATORIO = \"http://sistemas.anatel.gov.br/se/eApp/reports/b/srd/resumo_sistema.php?id={id}&state={state}\"\n",
-    "ESTACAO = \"http://sistemas.anatel.gov.br/se/public/view/b/srd.php?wfid=estacoes&id={}\""
+    "ESTACAO = \"http://sistemas.anatel.gov.br/se/public/view/b/srd.php?wfid=estacoes&id={}\"\n",
+    "\n",
+    "CHANNELS = Path(__file__).parent / \"arquivos\" / \"canalizacao_smp.csv\"\n",
+    "IBGE = Path(__file__).parent / \"arquivos\" / \"municipios.csv\"\n"
    ]
   },
   {
@@ -67,7 +71,7 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "COLUNAS = (\n",
+    "COLUNAS = [\n",
     "    \"Frequência\",\n",
     "    \"Entidade\",\n",
     "    \"Fistel\",\n",
@@ -85,7 +89,62 @@
     "    \"Status\",\n",
     "    \"Fonte\",\n",
     "    \"Multiplicidade\",\n",
-    ")\n",
+    "]\n",
+    "\n",
+    "COLS_LICENCIAMENTO = [\n",
+    "    \"Frequência\",\n",
+    "    \"Entidade\",\n",
+    "    \"Fistel\",\n",
+    "    \"Número_Estação\",\n",
+    "    \"Município\",\n",
+    "    \"Código_Município\",\n",
+    "    \"UF\",\n",
+    "    \"Latitude\",\n",
+    "    \"Longitude\",\n",
+    "    \"Classe\",\n",
+    "    \"Num_Serviço\",\n",
+    "    \"Classe_Emissão\",\n",
+    "    \"Largura_Emissão(kHz)\",\n",
+    "    \"Validade_RF\",\n",
+    "    \"Status\",\n",
+    "    \"Fonte\",\n",
+    "    \"Multiplicidade\",\n",
+    "    \"Potência(W)\",\n",
+    "    \"Cod_Tipo_Antena\",\n",
+    "    \"Polarização\",\n",
+    "    # \"Raio_Antena\",\n",
+    "    \"Ganho_Antena\",\n",
+    "    \"FC_Antena\",\n",
+    "    \"Ang_MP_Antena\",\n",
+    "    \"Ângulo_Elevação\",\n",
+    "    \"Azimute\",\n",
+    "    \"Altura_Antena\",\n",
+    "    \"Perdas_Acessorias\",\n",
+    "    \"Log\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "AGG_LICENCIAMENTO = [\n",
+    "    \"Frequência\",\n",
+    "    \"Entidade\",\n",
+    "    \"Fistel\",\n",
+    "    \"Código_Município\",\n",
+    "    \"Longitude\",\n",
+    "    \"Latitude\",\n",
+    "    \"Classe\",\n",
+    "    \"Num_Serviço\",\n",
+    "    \"Classe_Emissão\",\n",
+    "    \"Largura_Emissão(kHz)\",\n",
+    "]\n",
+    "\n",
+    "AGG_SMP = [\n",
+    "    \"Código_Município\",\n",
+    "    \"Fistel\",\n",
+    "    \"Frequência\",\n",
+    "    \"Largura_Emissão(kHz)\",\n",
+    "    \"Classe_Emissão\",\n",
+    "    \"Tecnologia\",\n",
+    "]\n",
     "\n",
     "APP_ANALISE_PT = (\n",
     "    \"Frequência\",\n",
@@ -187,6 +246,7 @@
     "}\n",
     "\n",
     "BW = {\"H\": 0.001, \"K\": 1, \"M\": 1000, \"G\": 1000000}\n",
+    "\n",
     "BW_MAP = {\n",
     "    \"167\": \"6M00\",\n",
     "    \"205\": \"10K0\",\n",
@@ -200,23 +260,7 @@
     "    \"\": \"\",\n",
     "}\n",
     "\n",
-    "COLS_TELECOM = {\n",
-    "    \"NumFistel\": \"Fistel\",\n",
-    "    \"NumServico\": \"Num_Serviço\",\n",
-    "    \"NomeEntidade\": \"Entidade\",\n",
-    "    \"SiglaUf\": \"UF\",\n",
-    "    \"NumEstacao\": \"Número_Estação\",\n",
-    "    \"CodTipoClasseEstacao\": \"Classe\",\n",
-    "    \"NomeMunicipio\": \"Município\",\n",
-    "    \"CodMunicipio\": \"Código_Município\",\n",
-    "    \"DataValidade\": \"Validade_RF\",\n",
-    "    \"FreqTxMHz\": \"Frequência\",\n",
-    "    \"Latitude\": \"Latitude\",\n",
-    "    \"Longitude\": \"Longitude\",\n",
-    "    \"DesignacaoEmissao\": \"Designação_Emissão\",\n",
-    "}\n",
-    "\n",
-    "COLS_SRD = {\n",
+    "DICT_SRD = {\n",
     "    \"frequency\": \"Frequência\",\n",
     "    \"licensee\": \"Entidade\",\n",
     "    \"NumFistel\": \"Fistel\",\n",
@@ -230,43 +274,68 @@
     "    \"NumServico\": \"Num_Serviço\",\n",
     "    \"DataValFreq\": \"Validade_RF\",\n",
     "    \"state\": \"Status\",\n",
+    "    # \"PotenciaTransmissorWatts\": \"Potência(W)\",\n",
+    "    # \"CodTipoAntena\": \"Cod_TipoAntena\",\n",
+    "    # \"Polarizacao\": \"Polarização\",\n",
+    "    # \"RaioAntena\": \"Raio_Antena\",\n",
+    "    # \"GanhoAntena\": \"Ganho_Antena\",\n",
+    "    # \"FrenteCostaAntena\": \"FC_Antena\",\n",
+    "    # \"AnguloMeiaPotenciaAntena\": \"Ang_MP_Antena\",\n",
+    "    # \"AnguloElevacao\": \"Ângulo_Elevação\",\n",
+    "    # \"Azimute\": \"Azimute\",\n",
+    "    # \"AlturaAntena\": \"Altura_Antena\",\n",
+    "    # \"PerdasAcessorias\": \"Perdas_Acessorias\",\n",
     "}\n",
     "\n",
-    "PROJECTION_SRD = {\"frequency\": 1.0,\n",
-    "                \"licensee\": 1.0,\n",
-    "                \"NumFistel\": 1.0,\n",
-    "                \"estacao.NumEstacao\": 1.0,\n",
-    "                # flatten the nested fields with dot notation\n",
-    "                \"srd_planobasico.NomeMunicipio\": \"$srd_planobasico.NomeMunicipio\",\n",
-    "                \"srd_planobasico.CodMunicipio\": \"$srd_planobasico.CodMunicipio\",\n",
-    "                \"srd_planobasico.SiglaUF\": \"$srd_planobasico.SiglaUF\",\n",
-    "                \"estacao.MedLatitudeDecimal\": \"$estacao.MedLatitudeDecimal\",\n",
-    "                \"estacao.MedLongitudeDecimal\": \"$estacao.MedLongitudeDecimal\",\n",
-    "                \"stnClass\": 1.0,\n",
-    "                \"NumServico\": 1.0,\n",
-    "                \"habilitacao.DataValFreq\": 1.0,\n",
-    "                \"Status.state\": \"$Status.state\"\n",
-    "               }\n",
+    "PROJECTION_SRD = {\n",
+    "    \"frequency\": 1.0,\n",
+    "    \"licensee\": 1.0,\n",
+    "    \"NumFistel\": 1.0,\n",
+    "    \"estacao.NumEstacao\": 1.0,\n",
+    "    # flatten the nested fields with dot notation\n",
+    "    \"srd_planobasico.NomeMunicipio\": \"$srd_planobasico.NomeMunicipio\",\n",
+    "    \"srd_planobasico.CodMunicipio\": \"$srd_planobasico.CodMunicipio\",\n",
+    "    \"srd_planobasico.SiglaUF\": \"$srd_planobasico.SiglaUF\",\n",
+    "    \"estacao.MedLatitudeDecimal\": \"$estacao.MedLatitudeDecimal\",\n",
+    "    \"estacao.MedLongitudeDecimal\": \"$estacao.MedLongitudeDecimal\",\n",
+    "    \"stnClass\": 1.0,\n",
+    "    \"NumServico\": 1.0,\n",
+    "    \"habilitacao.DataValFreq\": 1.0,\n",
+    "    \"Status.state\": \"$Status.state\",\n",
+    "    # \"PotenciaTransmissorWatts\": 1.0,\n",
+    "    # \"CodTipoAntena\": 1.0,\n",
+    "    # \"Polarizacao\": 1.0,\n",
+    "    # \"RaioAntena\": 1.0,\n",
+    "    # \"GanhoAntena\": 1.0,\n",
+    "    # \"FrenteCostaAntena\": 1.0,\n",
+    "    # \"AnguloMeiaPotenciaAntena\": 1.0,\n",
+    "    # \"AnguloElevacao\": 1.0,\n",
+    "    # \"Azimute\": 1.0,\n",
+    "    # \"AlturaAntena\": 1.0,\n",
+    "    # \"PerdasAcessorias\": 1.0,\n",
+    "}\n",
     "\n",
-    "COLS_SMP = {\n",
+    "DICT_LICENCIAMENTO = {\n",
     "    \"NumAto\": \"Num_Ato\",\n",
     "    \"NumFistel\": \"Fistel\",\n",
+    "    \"NumServico\": \"Num_Serviço\",\n",
     "    \"NomeEntidade\": \"Entidade\",\n",
     "    \"SiglaUf\": \"UF\",\n",
     "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"CodTipoClasseEstacao\": \"Classe\",\n",
+    "    \"NomeMunicipio\": \"Município\",\n",
     "    \"CodMunicipio\": \"Código_Município\",\n",
     "    \"DataValidade\": \"Validade_RF\",\n",
-    "    \"FreqTxMHz\": \"Frequência_Transmissão\",\n",
-    "    \"FreqRxMHz\": \"Frequência_Recepção\",\n",
+    "    \"FreqTxMHz\": \"Frequência\",\n",
     "    \"formId\": \"Tipo_Estação\",\n",
     "    \"Tecnologia\": \"Tecnologia\",\n",
     "    \"Latitude\": \"Latitude\",\n",
     "    \"Longitude\": \"Longitude\",\n",
-    "    \"DesignacaoEmissao\": \"Designacao_Emissão\",\n",
+    "    \"DesignacaoEmissao\": \"Designação_Emissão\",\n",
     "    \"PotenciaTransmissorWatts\": \"Potência(W)\",\n",
-    "    \"CodTipoAntena\": \"Cod_TipoAntena\",\n",
+    "    \"CodTipoAntena\": \"Cod_Tipo_Antena\",\n",
     "    \"Polarizacao\": \"Polarização\",\n",
-    "    \"RaioAntena\": \"Raio_Antena\",\n",
+    "    # \"RaioAntena\": \"Raio_Antena\",\n",
     "    \"GanhoAntena\": \"Ganho_Antena\",\n",
     "    \"FrenteCostaAntena\": \"FC_Antena\",\n",
     "    \"AnguloMeiaPotenciaAntena\": \"Ang_MP_Antena\",\n",
@@ -274,7 +343,9 @@
     "    \"Azimute\": \"Azimute\",\n",
     "    \"AlturaAntena\": \"Altura_Antena\",\n",
     "    \"PerdasAcessorias\": \"Perdas_Acessorias\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "PROJECTION_LICENCIAMENTO = {k: 1.0 for k in DICT_LICENCIAMENTO}"
    ]
   },
   {
@@ -416,11 +487,8 @@
     "        {\"DataValidade\": {\"$nin\": [\"\", None]}},\n",
     "        {\"Status.state\": \"LIC-LIC-01\"},\n",
     "        {\"NumServico\": {\"$nin\": [\"010\", \"045\", \"171\", \"450\", \"750\", \"\", None]}},\n",
-    "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0]}},\n",
+    "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0], \"$type\": 1.0}},\n",
     "        {\"CodMunicipio\": {\"$nin\": [None, \"\"]}},\n",
-    "        {\"FreqTxMHz\": {\"$type\": 1.0}},\n",
-    "        {\"Latitude\": {\"$type\": 1.0}},\n",
-    "        {\"Longitude\": {\"$type\": 1.0}},\n",
     "    ]\n",
     "}\n",
     "\n",
@@ -437,11 +505,12 @@
     "\n",
     "MONGO_SMP = {\n",
     "    \"$and\": [\n",
+    "        {\"DataExclusao\": None},\n",
     "        {\"DataValidade\": {\"$nin\": [\"\", None]}},\n",
     "        {\"Status.state\": \"LIC-LIC-01\"},\n",
     "        {\"NumServico\": \"010\"},\n",
-    "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0]}},\n",
-    "        {\"FreqTxMHz\": {\"$type\": 1.0}},\n",
+    "        {\"FreqTxMHz\": {\"$nin\": [None, \"\", 0], \"$type\": 1.0}},\n",
+    "        {\"CodMunicipio\": {\"$nin\": [None, \"\"]}},\n",
     "    ]\n",
     "}"
    ]
