--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -44,7 +44,10 @@
     "from dataclasses import dataclass\n",
     "\n",
     "import pyodbc\n",
-    "from pymongo import MongoClient"
+    "\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "# from motor.motor_asyncio import AsyncIOMotorClient"
    ]
   },
   {
@@ -91,7 +94,7 @@
     "    mongo_uri: str\n",
     "\n",
     "    def connect(self):\n",
-    "        # This method returns a connected MongoClient object\n",
+    "        # This method returns a connected AsyncIOMotorClient object\n",
     "        return MongoClient(self.mongo_uri)"
    ]
   },
