--- a/nbs/02_updates.ipynb
+++ b/nbs/02_updates.ipynb
@@ -870,11 +870,11 @@
     "    with console.status(\"Consolidando os dados do Mosaico...\", spinner=\"runner\"):\n",
     "        database = mongo_client[\"sms\"]\n",
     "        collection = database[\"srd\"]\n",
-    "        list_data = list(collection.find(MONGO_SRD, projection=COLS_SRD.keys()))\n",
+    "        list_data = list(collection.find(MONGO_SRD, projection=DICT_SRD.keys()))\n",
     "        mosaico = pd.json_normalize(list_data)\n",
     "        mosaico = mosaico.drop(columns=[\"estacao\"])\n",
-    "        mosaico = mosaico[list(COLS_SRD.keys())]\n",
-    "        mosaico.rename(COLS_SRD, axis=1, inplace=True)\n",
+    "        mosaico = mosaico[list(DICT_SRD.keys())]\n",
+    "        mosaico.rename(DICT_SRD, axis=1, inplace=True)\n",
     "        mosaico = clean_mosaico(mosaico, folder)\n",
     "        mosaico[\"Fonte\"] = \"MOS\"\n",
     "        mosaico[\"Num_Serviço\"].fillna(\"\", inplace=True)\n",
@@ -1190,12 +1190,12 @@
     "    database = mongo_client[\"sms\"]\n",
     "    collection = database[\"licenciamento\"]\n",
     "    query = collection.find(\n",
-    "        MONGO_TELECOM, projection={k: 1.0 for k in COLS_TELECOM.keys()}, limit=0\n",
+    "        MONGO_TELECOM, projection={k: 1.0 for k in DICT_LICENCIAMENTO.keys()}, limit=0\n",
     "    )\n",
     "    print(\n",
     "        \"[red] :warning: Executando a query na base licenciamento do Mosaico, processo demorado! :warning:\"\n",
     "    )\n",
-    "    df = pd.DataFrame(list(query), columns=COLS_TELECOM.keys(), dtype=\"string\")\n",
+    "    df = pd.DataFrame(list(query), columns=DICT_LICENCIAMENTO.keys(), dtype=\"string\")\n",
     "    return _process_telecom(df, folder)\n",
     "\n",
     "\n",
@@ -1205,7 +1205,7 @@
     ") -> pd.DataFrame:\n",
     "    \"\"\"Formata e pós-processa e mescla os dados de Telecomunicações do Mosaico\"\"\"\n",
     "    # df.drop(\"_id\", axis=1, inplace=True)\n",
-    "    df.rename(COLS_TELECOM, axis=1, inplace=True)\n",
+    "    df.rename(DICT_LICENCIAMENTO, axis=1, inplace=True)\n",
     "    df = split_designacao(df)\n",
     "    subset = [\n",
     "        \"Frequência\",\n",
