--- a/nbs/_smp_uplink_teórico.ipynb
+++ b/nbs/_smp_uplink_teórico.ipynb
@@ -4206,6 +4206,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "l = '[(\"Registro\", (\"Latitude\", \"Longitude\")), (\"Processamento\", \"Coordenadas do Município - Registros Agrupados\")]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Registro': ('Latitude', 'Longitude'),\n",
+       " 'Processamento': 'Coordenadas do Município - Registros Agrupados'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(eval(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
