:recycle: Terminada validação da extração das bases da Anatel
Completa refatoração utilizando Classes, herança e composição utilizando a Classe GettAttr do fastcore

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -51,8 +51,8 @@
     "RELATORIO = \"http://sistemas.anatel.gov.br/se/eApp/reports/b/srd/resumo_sistema.php?id={id}&state={state}\"\n",
     "ESTACAO = \"http://sistemas.anatel.gov.br/se/public/view/b/srd.php?wfid=estacoes&id={}\"\n",
     "\n",
-    "CHANNELS = Path(__file__).parent / \"arquivos\" / \"canalizacao_smp.csv\"\n",
-    "IBGE = Path(__file__).parent / \"arquivos\" / \"municipios.csv\"\n"
+    "CHANNELS = Path(__file__).parent / \"datasources\" / \"arquivos\" / \"canalizacao_smp.csv\"\n",
+    "IBGE = Path(__file__).parent / \"datasources\" / \"arquivos\" / \"municipios.csv\""
    ]
   },
   {
@@ -89,6 +89,7 @@
     "    \"Status\",\n",
     "    \"Fonte\",\n",
     "    \"Multiplicidade\",\n",
+    "    \"Log\",\n",
     "]\n",
     "\n",
     "COLS_LICENCIAMENTO = [\n",
