--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp connectors\n",
+    "#| default_exp datasources.connectors\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -44,7 +44,6 @@
     "from dataclasses import dataclass\n",
     "\n",
     "import pyodbc\n",
-    "\n",
     "from pymongo import MongoClient\n",
     "\n",
     "# from motor.motor_asyncio import AsyncIOMotorClient"
@@ -86,7 +85,12 @@
     "            connection_string += f\"\"\"UID={self.sql_params.get('username')};\n",
     "                                  PWD={self.sql_params.get('password')};\n",
     "                                  Trusted_Connection=no;\"\"\"\n",
-    "        return pyodbc.connect(connection_string)\n",
+    "        try:\n",
+    "            return pyodbc.connect(connection_string)\n",
+    "        except pyodbc.OperationalError as e:\n",
+    "            raise ConnectionError(\n",
+    "                \"Não foi possível abrir uma conexão com o SQL Server. Esta conexão somente funciona da rede cabeada!\"\n",
+    "            ) from e\n",
     "\n",
     "\n",
     "@dataclass\n",
@@ -103,7 +107,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#|eval:false\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "from extracao.constants import SQL_RADCOM, SQL_STEL\n",
+    "from fastcore.test import test_eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval:false\n",
+    "load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval:false\n",
+    "def test_connection():\n",
+    "    conn = SQLServer(os.environ['SQL_PARAMS']).connect()\n",
+    "    cursor = conn.cursor()\n",
+    "    for query in (SQL_RADCOM,SQL_STEL):\n",
+    "        cursor.execute(query)\n",
+    "        test_eq(type(cursor.fetchone()), pyodbc.Row)\n",
+    "test_connection()"
+   ]
   }
  ],
  "metadata": {
