--- a/nbs/02b_aisweb.ipynb
+++ b/nbs/02b_aisweb.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp aero.aisweb\n",
+    "#| default_exp datasources.aisweb\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -58,7 +58,7 @@
     "from fastcore.parallel import parallel\n",
     "from fastcore.utils import store_attr\n",
     "\n",
-    "from extracao.aero.icao import map_channels\n",
+    "from extracao.datasources.icao import map_channels\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -161,6 +161,7 @@
     "            df.drop([\"@ciad_id\", \"id\", \"ciad\", \"dt\"], axis=1, inplace=True)\n",
     "            # Remove os não aeródromos\n",
     "            return df[df.type == \"AD\"].reset_index(drop=True)\n",
+    "\n",
     "        return pd.DataFrame()\n",
     "\n",
     "    @cached_property\n",
@@ -299,7 +300,13 @@
     "def get_aisw() -> pd.DataFrame:  # DataFrame com todos os dados do GEOAISWEB\n",
     "    \"\"\"Lê e processa os dataframes individuais da API AISWEB e retorna o conjunto concatenado\"\"\"\n",
     "    aisweb = AisWeb(os.environ[\"AISWKEY\"], os.environ[\"AISWPASS\"])\n",
-    "    return aisweb.records"
+    "    return aisweb.records\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    df = get_aisw()\n",
+    "    print(df.shape)\n",
+    "    df.sample(5)"
    ]
   },
   {
