--- a/nbs/02a_icao.ipynb
+++ b/nbs/02a_icao.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp aero.icao\n",
+    "#| default_exp datasources.icao\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -186,14 +186,15 @@
     "    for row in df[df.Description.str.contains(\"ILS|DME\")].itertuples():\n",
     "        if not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
     "            for i, c in enumerate(ch.values[0][2:]):\n",
-    "                if pd.notnull(c):\n",
-    "                    match i:\n",
-    "                        case 0:\n",
-    "                            freq_type = \"ILS glide path\"\n",
-    "                        case 1:\n",
-    "                            freq_type = \"Airbone DME\"\n",
-    "                        case 2:\n",
-    "                            freq_type = \"Ground-based DME\"\n",
+    "                if pd.notna(c):\n",
+    "                    if i == 0:\n",
+    "                        freq_type = \"ILS glide path\"\n",
+    "                    elif i == 1:\n",
+    "                        freq_type = \"Airbone DME\"\n",
+    "                    elif i == 2:\n",
+    "                        freq_type = \"Ground-based DME\"\n",
+    "                    else:\n",
+    "                        raise ValueError(\"No additional frequency to map on channel\")\n",
     "                    description = (\n",
     "                        f\"{row.Description.replace(origem , 'DOC')} ({freq_type})\"\n",
     "                    )\n",
