--- a/nbs/02d_redemet.ipynb
+++ b/nbs/02d_redemet.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp aero.redemet\n",
+    "#| default_exp datasources.redemet\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
