:ambulance: Correção de bug retornando frequências nulas
O bug estava em utilizar comparação simples ao utilizar floats em vez do np.isclose

--- a/nbs/00b_format.ipynb
+++ b/nbs/00b_format.ipynb
@@ -282,12 +282,12 @@
     "    only_left = df.loc[left, left_cols].drop_duplicates(\n",
     "        subset=left_cols, ignore_index=True\n",
     "    )\n",
-    "    only_left.columns = [c.removesuffix(x) for c in left_cols]\n",
+    "    only_left.columns = [c.replace(x, \"\") for c in left_cols]\n",
     "\n",
     "    only_right = df.loc[right, right_cols].drop_duplicates(\n",
     "        subset=right_cols, ignore_index=True\n",
     "    )\n",
-    "    only_right.columns = [c.removesuffix(y) for c in right_cols]\n",
+    "    only_right.columns = [c.replace(y, \"\") for c in right_cols]\n",
     "\n",
     "    intersection_left = len(df_left) - len(only_left)\n",
     "    intersection_right = len(df_right) - len(only_right)\n",
