--- a/nbs/01d_mosaico.ipynb
+++ b/nbs/01d_mosaico.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "MONGO_URI = os.environ.get(\"MONGO_URI\")"
+    "MONGO_URI: str = os.environ.get(\"MONGO_URI\")"
    ]
   },
   {
@@ -125,9 +125,9 @@
     "        database = client[self.database]\n",
     "        collection = database[collection]\n",
     "        result = collection.aggregate(pipeline)\n",
-    "        df = pd.DataFrame(list(result))\n",
-    "        df = df.drop(columns=[\"_id\"])\n",
-    "        return df\n",
+    "        return pd.DataFrame(list(result))\n",
+    "        # df = df.drop(columns=[\"_id\"])\n",
+    "        # return df\n",
     "\n",
     "    @staticmethod\n",
     "    def split_designacao(\n",
