--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -91,9 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export\n",
-    "\n",
-    "\n",
+    "#| export\n",
     "@dataclass\n",
     "class Base:\n",
     "    folder: Union[str, Path] = Path(__file__).parent / \"arquivos\" / \"saida\"\n",
@@ -104,16 +102,14 @@
     "        try:\n",
     "            df = pd.read_parquet(file)\n",
     "        except (ArrowInvalid, FileNotFoundError) as e:\n",
-    "            raise e(f\"Error when reading {file}\") from e\n",
+    "            raise ValueError(f\"Error when reading {file}\") from e\n",
     "        return df\n",
     "\n",
     "    def _save(\n",
     "        self, df: pd.DataFrame, folder: Union[str, Path], stem: str\n",
     "    ) -> pd.DataFrame:\n",
     "        \"\"\"Format, Save and return a dataframe\"\"\"\n",
-    "        df = df.astype(\"string\").drop_duplicates(\n",
-    "            keep=\"first\", ignore_index=True\n",
-    "        )\n",
+    "        df = df.astype(\"string\").drop_duplicates(keep=\"first\", ignore_index=True)\n",
     "        try:\n",
     "            file = Path(f\"{folder}/{stem}.parquet.gzip\")\n",
     "            df.to_parquet(file, compression=\"gzip\", index=False)\n",
@@ -148,19 +144,18 @@
     "    def discarded(self) -> pd.DataFrame:\n",
     "        df = pd.DataFrame(columns=self.columns)\n",
     "        df[\"Log\"] = \"[]\"\n",
+    "        return df\n",
     "\n",
     "    def append2discarded(self, dfs: Union[pd.DataFrame, List]) -> None:\n",
     "        \"\"\"Receives one of more dataframes and append to the discarded dataframe\"\"\"\n",
     "        self.discarded = pd.concat([self.discarded] + listify(dfs), ignore_index=True)\n",
-    "\n",
-    "    \n",
     "\n",
     "    @staticmethod\n",
     "    def register_log(df: pd.DataFrame, log: str, row_filter: pd.Series = None):\n",
     "        \"\"\"Register a log in the dataframe\"\"\"\n",
     "        if row_filter is None:\n",
     "            row_filter = pd.Series(True, index=df.index)\n",
-    "        df.loc[row_filter, \"Log\"] = df.loc[row_filter, \"Log\"] + '|' + log\n",
+    "        df.loc[row_filter, \"Log\"] = df.loc[row_filter, \"Log\"] + \"|\" + log\n",
     "        return df\n",
     "\n",
     "    @property\n",
