--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "MONGO_URI = os.environ.get(\"MONGO_URI\")\n"
+    "MONGO_URI = os.environ.get(\"MONGO_URI\")"
    ]
   },
   {
@@ -146,13 +146,15 @@
     "            # project the fields that you want to keep\n",
     "            {\"$project\": self.projection},\n",
     "        ]\n",
-    "        df = self._extract(self.collection, pipeline)\n",
+    "        df = self._extract(self.collection, pipeline).astype(\n",
+    "            \"string\"\n",
+    "        )  # Necessária a conversão nesse ponto\n",
     "        df.loc[df[\"estacao\"] == \"[]\", \"estacao\"] = \"{}\"\n",
     "        cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
     "        for col in cols:\n",
     "            df = df.join(pd.json_normalize(df[col].apply(eval)))\n",
     "        df = df.drop(columns=cols)\n",
-    "        df[\"Log\"] = \"[]\"\n",
+    "        df[\"Log\"] = \"\"\n",
     "        # Substitui strings vazias e somente com espaços por nulo\n",
     "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
     "\n",
@@ -167,7 +169,7 @@
     "        discarded = df[~status].copy()\n",
     "        log = \"\"\"[(\"Registro\", \"Status\"), \n",
     "                (\"Processamento\", \"Registro com Status não considerado para fins de monitoração\")]\"\"\"\n",
-    "        discarded = self.register_log(discarded, log)        \n",
+    "        discarded = self.register_log(discarded, log)\n",
     "        df = df[\n",
     "            df.Status.str.contains(\"-C1$|-C2$|-C3$|-C4$|-C7|-C98$\", na=False)\n",
     "        ].reset_index(drop=True)\n",
@@ -176,7 +178,7 @@
     "        )\n",
     "        discarded_with_na = df[df.Frequência.isna()].copy()\n",
     "        log = \"\"\"[(\"Registro\", \"Frequência\"), \n",
-    "                (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\" \n",
+    "                (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
     "        discarded_with_na = self.register_log(discarded_with_na, log)\n",
     "        df = df.dropna(subset=\"Frequência\", ignore_index=True)\n",
     "        df.loc[df[\"Num_Serviço\"] == \"205\", \"Frequência\"] = df.loc[\n",
@@ -191,7 +193,7 @@
     "        df = self.split_designacao(df)\n",
     "        df[\"Multiplicidade\"] = 1\n",
     "        self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
-    "        return df.loc[:, self.columns]\n"
+    "        return df.loc[:, self.columns]"
    ]
   },
   {
@@ -375,7 +377,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31096</th>\n",
+       "      <th>31098</th>\n",
        "      <td>91.5</td>\n",
        "      <td>EMPRESA BRASIL DE COMUNICACAO S.A. - EBC</td>\n",
        "      <td>50446653047</td>\n",
@@ -396,7 +398,7 @@
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31097</th>\n",
+       "      <th>31099</th>\n",
        "      <td>87.1</td>\n",
        "      <td>EMPRESA BRASIL DE COMUNICACAO S.A. - EBC</td>\n",
        "      <td>50446654442</td>\n",
@@ -417,7 +419,7 @@
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31098</th>\n",
+       "      <th>31100</th>\n",
        "      <td>87.1</td>\n",
        "      <td>EMPRESA BRASIL DE COMUNICACAO S.A. - EBC</td>\n",
        "      <td>50446653632</td>\n",
@@ -438,7 +440,7 @@
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31099</th>\n",
+       "      <th>31101</th>\n",
        "      <td>91.1</td>\n",
        "      <td>RADIO CIDADE EUCLIDES DA CUNHA LTDA ME</td>\n",
        "      <td>06020354571</td>\n",
@@ -459,7 +461,7 @@
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31100</th>\n",
+       "      <th>31102</th>\n",
        "      <td>617.0</td>\n",
        "      <td>PREFEITURA MUNICIPAL DE CARATINGA</td>\n",
        "      <td>50446662461</td>\n",
@@ -481,7 +483,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>31101 rows × 18 columns</p>\n",
+       "<p>31103 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -492,11 +494,11 @@
        "3           69.0                  TELEVISAO SANTA CRUZ LTDA  06020355110   \n",
        "4          177.0                           TV CABRALIA LTDA  06020354903   \n",
        "...          ...                                        ...          ...   \n",
-       "31096       91.5  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446653047   \n",
-       "31097       87.1  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446654442   \n",
-       "31098       87.1  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446653632   \n",
-       "31099       91.1     RADIO CIDADE EUCLIDES DA CUNHA LTDA ME  06020354571   \n",
-       "31100      617.0          PREFEITURA MUNICIPAL DE CARATINGA  50446662461   \n",
+       "31098       91.5  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446653047   \n",
+       "31099       87.1  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446654442   \n",
+       "31100       87.1  EMPRESA BRASIL DE COMUNICACAO S.A. - EBC   50446653632   \n",
+       "31101       91.1     RADIO CIDADE EUCLIDES DA CUNHA LTDA ME  06020354571   \n",
+       "31102      617.0          PREFEITURA MUNICIPAL DE CARATINGA  50446662461   \n",
        "\n",
        "      Número_Estação               Município Código_Município  UF  \\\n",
        "0                NaN         Cruzeiro do Sul          1200203  AC   \n",
@@ -505,11 +507,11 @@
        "3          322623553                 Itabuna          2914802  BA   \n",
        "4          322623537                 Itabuna          2914802  BA   \n",
        "...              ...                     ...              ...  ..   \n",
-       "31096            NaN  Santa Maria da Vitória          2928109  BA   \n",
-       "31097            NaN                  Lavras          3138203  MG   \n",
-       "31098            NaN         Chapadão do Sul          5002951  MS   \n",
-       "31099      322623499       Euclides da Cunha          2910701  BA   \n",
-       "31100            NaN     Santa Rita de Minas          3159357  MG   \n",
+       "31098            NaN  Santa Maria da Vitória          2928109  BA   \n",
+       "31099            NaN                  Lavras          3138203  MG   \n",
+       "31100            NaN         Chapadão do Sul          5002951  MS   \n",
+       "31101      322623499       Euclides da Cunha          2910701  BA   \n",
+       "31102            NaN     Santa Rita de Minas          3159357  MG   \n",
        "\n",
        "                   Latitude             Longitude Classe Num_Serviço  \\\n",
        "0                       NaN                   NaN      A         248   \n",
@@ -518,11 +520,11 @@
        "3      -14.7794444444443333  -39.2622222222221666      A         248   \n",
        "4      -14.7833333333333333  -39.2833333333333333      B         248   \n",
        "...                     ...                   ...    ...         ...   \n",
-       "31096                   NaN                   NaN     B2         230   \n",
-       "31097                   NaN                   NaN     B1         230   \n",
-       "31098                   NaN                   NaN      C         230   \n",
-       "31099  -10.5016666666666666  -39.0338888888888333     A3         230   \n",
-       "31100                   NaN                   NaN      C         801   \n",
+       "31098                   NaN                   NaN     B2         230   \n",
+       "31099                   NaN                   NaN     B1         230   \n",
+       "31100                   NaN                   NaN      C         230   \n",
+       "31101  -10.5016666666666666  -39.0338888888888333     A3         230   \n",
+       "31102                   NaN                   NaN      C         801   \n",
        "\n",
        "      Classe_Emissão Largura_Emissão(kHz) Validade_RF Status    Fonte  \\\n",
        "0                                  6000.0        <NA>  TV-C1  MOSAICO   \n",
@@ -531,11 +533,11 @@
        "3                                  6000.0  2023-12-31  TV-C4  MOSAICO   \n",
        "4                                  6000.0  2023-12-31  TV-C4  MOSAICO   \n",
        "...              ...                  ...         ...    ...      ...   \n",
-       "31096                               256.0        <NA>  FM-C1  MOSAICO   \n",
-       "31097                               256.0        <NA>  FM-C1  MOSAICO   \n",
        "31098                               256.0        <NA>  FM-C1  MOSAICO   \n",
-       "31099                               256.0  2026-05-05  FM-C4  MOSAICO   \n",
-       "31100                              5700.0        <NA>  TV-C1  MOSAICO   \n",
+       "31099                               256.0        <NA>  FM-C1  MOSAICO   \n",
+       "31100                               256.0        <NA>  FM-C1  MOSAICO   \n",
+       "31101                               256.0  2026-05-05  FM-C4  MOSAICO   \n",
+       "31102                              5700.0        <NA>  TV-C1  MOSAICO   \n",
        "\n",
        "       Multiplicidade Log  \n",
        "0                   1  []  \n",
@@ -544,13 +546,13 @@
        "3                   1  []  \n",
        "4                   1  []  \n",
        "...               ...  ..  \n",
-       "31096               1  []  \n",
-       "31097               1  []  \n",
        "31098               1  []  \n",
        "31099               1  []  \n",
        "31100               1  []  \n",
+       "31101               1  []  \n",
+       "31102               1  []  \n",
        "\n",
-       "[31101 rows x 18 columns]"
+       "[31103 rows x 18 columns]"
       ]
      },
      "metadata": {},
@@ -595,31 +597,31 @@
        "      <th>0</th>\n",
        "      <td>57.0</td>\n",
        "      <td>FUNDACAO ALDEIA DE COMUNICACAO DO ACRE-FUNDAC</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>69.0</td>\n",
        "      <td>RÁDIO TV DO AMAZONAS LTDA.</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>183.0</td>\n",
        "      <td>SOCIEDADE ACREANA DE COMUNICACAO FRONTEIRA LTDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>201.0</td>\n",
        "      <td>RADIO E TELEVISAO NORTE LTDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>503.0</td>\n",
        "      <td>REDE UNIAO DE RADIO E TELEVISAO LTDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -628,38 +630,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4523</th>\n",
+       "      <th>4522</th>\n",
        "      <td>88.5</td>\n",
        "      <td>SISTEMA DE COMUNICACAO SOL LTDA.</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4523</th>\n",
+       "      <td>635.0</td>\n",
+       "      <td>FUNDACAO NOSSA SENHORA APARECIDA</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4524</th>\n",
-       "      <td>635.0</td>\n",
-       "      <td>FUNDACAO NOSSA SENHORA APARECIDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>617.0</td>\n",
+       "      <td>PARANA FM LTDA</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4525</th>\n",
-       "      <td>617.0</td>\n",
-       "      <td>PARANA FM LTDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>PABLO COMUNICACOES LTDA - EPP</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4526</th>\n",
-       "      <td>479.0</td>\n",
-       "      <td>PABLO COMUNICACOES LTDA - EPP</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4527</th>\n",
        "      <td>89.1</td>\n",
        "      <td>HL DA SILVA &amp; ESW FERREIRA LTDA</td>\n",
-       "      <td>[('Registro', 'Status'), ('Processamento', 'Re...</td>\n",
+       "      <td>[]|[(\"Registro\", \"Status\"), \\n                ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4528 rows × 3 columns</p>\n",
+       "<p>4527 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -670,26 +672,26 @@
        "3         201.0                     RADIO E TELEVISAO NORTE LTDA   \n",
        "4         503.0             REDE UNIAO DE RADIO E TELEVISAO LTDA   \n",
        "...         ...                                              ...   \n",
-       "4523       88.5                 SISTEMA DE COMUNICACAO SOL LTDA.   \n",
-       "4524      635.0                 FUNDACAO NOSSA SENHORA APARECIDA   \n",
-       "4525      617.0                                   PARANA FM LTDA   \n",
-       "4526      479.0                    PABLO COMUNICACOES LTDA - EPP   \n",
-       "4527       89.1                  HL DA SILVA & ESW FERREIRA LTDA   \n",
+       "4522       88.5                 SISTEMA DE COMUNICACAO SOL LTDA.   \n",
+       "4523      635.0                 FUNDACAO NOSSA SENHORA APARECIDA   \n",
+       "4524      617.0                                   PARANA FM LTDA   \n",
+       "4525      479.0                    PABLO COMUNICACOES LTDA - EPP   \n",
+       "4526       89.1                  HL DA SILVA & ESW FERREIRA LTDA   \n",
        "\n",
        "                                                    Log  \n",
-       "0     [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "1     [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "2     [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "3     [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "4     [('Registro', 'Status'), ('Processamento', 'Re...  \n",
+       "0     []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "1     []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "2     []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "3     []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "4     []|[(\"Registro\", \"Status\"), \\n                ...  \n",
        "...                                                 ...  \n",
-       "4523  [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "4524  [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "4525  [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "4526  [('Registro', 'Status'), ('Processamento', 'Re...  \n",
-       "4527  [('Registro', 'Status'), ('Processamento', 'Re...  \n",
+       "4522  []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "4523  []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "4524  []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "4525  []|[(\"Registro\", \"Status\"), \\n                ...  \n",
+       "4526  []|[(\"Registro\", \"Status\"), \\n                ...  \n",
        "\n",
-       "[4528 rows x 3 columns]"
+       "[4527 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -700,8 +702,8 @@
      "output_type": "stream",
      "text": [
       "======================================================================================================================================================\n",
-      "31101\n",
-      "Elapsed time: 9.074364900123328 seconds\n"
+      "31103\n",
+      "Elapsed time: 9.540770499967039 seconds\n"
      ]
     }
    ],
