Remoçã de Frequências NaN geradas no Uplink do SMP

--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -183,7 +183,8 @@
     "        df = df.dropna(subset=\"Frequência\", ignore_index=True)\n",
     "        df.loc[df[\"Num_Serviço\"] == \"205\", \"Frequência\"] = df.loc[\n",
     "            df[\"Num_Serviço\"] == \"205\", \"Frequência\"\n",
-    "        ].apply(lambda x: Decimal(x) / Decimal(1000))\n",
+    "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
+    "        df['Frequência'] = df['Frequência'].astype('float')\n",
     "        df[\"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
     "        df[\"Fonte\"] = \"MOSAICO\"\n",
     "        df[\"Num_Serviço\"] = df[\"Num_Serviço\"].fillna(\"\")\n",
