--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "MONGO_URI = os.environ.get(\"MONGO_URI\")\n"
+    "MONGO_URI = os.environ.get(\"MONGO_URI\")"
    ]
   },
   {
@@ -229,6 +229,11 @@
     "            \"size\", ascending=False, inplace=True, ignore_index=True\n",
     "        )\n",
     "        grouped_channels[\"Canalização\"] = \"Inválida\"\n",
+    "        grouped_channels.loc[:, \"Offset\"] = np.nan\n",
+    "        grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\"]] = pd.NA \n",
+    "        grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]] = grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]].astype('string')\n",
+    "        grouped_channels.loc[:, \"Offset\"] = grouped_channels.loc[:, \"Offset\"].astype('float')\n",
+    "        \n",
     "        for row in grouped_channels.itertuples():\n",
     "            interval = channels[\n",
     "                (row.Início_Canal_Down < channels[\"Downlink_Final\"])\n",
@@ -246,14 +251,15 @@
     "\n",
     "            down = \" | \".join(\n",
     "                interval[[\"Downlink_Inicial\", \"Downlink_Final\"]].apply(\n",
-    "                    lambda x: f\"{x[0]}-{x[1]}\", axis=1\n",
+    "                    lambda x: f\"{x.iloc[0]}-{x.iloc[1]}\", axis=1\n",
     "                )\n",
     "            )\n",
     "            faixas = \" | \".join(interval.Faixa.unique())\n",
-    "            offset = \" | \".join(interval.Offset.unique())\n",
+    "            if len(offset := interval.Offset.unique()) != 1:\n",
+    "                continue\n",
     "            grouped_channels.loc[\n",
     "                row.Index, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\", \"Offset\"]\n",
-    "            ] = (down, faixas, faixa, offset)\n",
+    "            ] = (down, faixas, faixa, float(offset[0]))\n",
     "        grouped_channels = grouped_channels[\n",
     "            [\n",
     "                \"Início_Canal_Down\",\n",
@@ -324,6 +330,7 @@
     "        down[\"Classe\"] = \"FB\"\n",
     "        up = df.drop(\"Frequência\", axis=1)\n",
     "        up = up.rename(columns={\"Frequência_Recepção\": \"Frequência\"})\n",
+    "        up.dropna(subset='Frequência', inplace=True)\n",
     "        up[\"Fonte\"] = \"CANALIZACAO-SMP\"\n",
     "        up[\"Classe\"] = \"ML\"\n",
     "        return pd.concat([down, up], ignore_index=True)\n",
@@ -340,7 +347,7 @@
     "        df = self.generate_uplink(df)\n",
     "        df = self.substitute_coordenates(df)\n",
     "        df = self.input_fixed_columns(df)\n",
-    "        return df.loc[:, self.columns]\n"
+    "        return df.loc[:, self.columns]"
    ]
   },
   {
