--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -143,7 +143,7 @@
     "    @cached_property\n",
     "    def discarded(self) -> pd.DataFrame:\n",
     "        df = pd.DataFrame(columns=self.columns)\n",
-    "        df[\"Log\"] = \"[]\"\n",
+    "        df[\"Log\"] = \"\"\n",
     "        return df\n",
     "\n",
     "    def append2discarded(self, dfs: Union[pd.DataFrame, List]) -> None:\n",
